made some style shit work

--- a/style.css
+++ b/style.css
@@ -87,3 +87,10 @@ body {
     border: 1px solid #ccc;
     border-top: none;
 }
+
+.aa {
+    padding-bottom: 20px;
+}
+.aa:hover {
+    text-decoration: underline;
+}
