--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,17 +4,11 @@ body {
     padding: 0;
 }
 
-.container {
-    display: flex;
-    flex-direction: row;
-    height: calc(100vh - 10vh);
-}
-
 .list {
     flex: 1;
     padding: 1rem;
+    padding-top: 50px;
     background-color: #f0f0f0;
-    overflow-y: auto;
 }
 
 .map {
@@ -56,8 +50,14 @@ body {
     transition: 3s ease;
 }
 
+.container {
+    display: flex;
+    flex-direction: row;
+    height: calc(100vh - 10vh);
+}
+
 .tab {
-    overflow: hidden;
+    overflow: auto;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
@@ -86,6 +86,7 @@ body {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+    /* overflow-y: auto; */
 }
 
 .aa {
